# Click-and-Traverse

./: README.md  README_zh.md  train_batch.py
deploy/: README.MD
deploy/Click-and-Traverse-SLAM/: .gitignore  README.MD
deploy/Click-and-Traverse-SLAM/lidar_ws/src/FAST_LIO/config/: mid360.yaml
deploy/Click-and-Traverse-SLAM/lidar_ws/src/FAST_LIO/rviz/: fastlio.rviz
deploy/Click-and-Traverse-SLAM/lidar_ws/src/FAST_LIO/rviz_cfg/: loam_livox.rviz
deploy/Click-and-Traverse-SLAM/lidar_ws/src/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
deploy/Click-and-Traverse-SLAM/lidar_ws/src/Livox-SDK2/samples/livox_lidar_quick_start/: mid360_config.json
deploy/Click-and-Traverse-SLAM/lidar_ws/src/ground_segmentation/: CMakeLists.txt  package.xml
deploy/Click-and-Traverse-SLAM/lidar_ws/src/ground_segmentation/launch/: ground_segmentation_launch.xml
deploy/Click-and-Traverse-SLAM/lidar_ws/src/ground_segmentation/src/: ground_segmentation_node.cpp
deploy/Click-and-Traverse-SLAM/lidar_ws/src/livox_ros_driver2/config/: MID360_config.json
deploy/Click-and-Traverse-SLAM/lidar_ws/src/livox_ros_driver2/launch_ROS1/: msg_MID360.launch
deploy/Click-and-Traverse-SLAM/lidar_ws/src/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py  rviz_MID360_launch.py
deploy/Click-and-Traverse-SLAM/lidar_ws/src/octomap_mapping/: README.md
deploy/Click-and-Traverse-SLAM/lidar_ws/src/octomap_rviz_plugins/: CMakeLists.txt
deploy/Click-and-Traverse-SLAM/octomap_py_pkg/: setup.py
deploy/Click-and-Traverse-SLAM/octomap_py_pkg/example/: octomap_tensor_node.py
deploy/Click-and-Traverse-SLAM/octomap_py_pkg/src/: bt_buffer_to_local_voxel.cpp  bt_buffer_to_voxel.cpp
(+4 files in other folders)
